<resources>
    <string name="app_name">Petagram</string>
    <string name="item_contacto">Contacto</string>
    <string name="content_description_favoritos">"favoritos "</string>
    <string name="numero_raiteadas">0</string>
    <string name="textview">TextView</string>
    <string name="puppy_descripcion">puppy</string>
    <string name="boton_para_raitear">Boton para Raitear</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="exit">Exit</string>
    <string name="item_acercade">Acerca de</string>
    <string name="imagen_about">imagen about</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descripcion_imagen_perfil">foto de perfil</string>
    <string name="title_activity_contacto">Contacto</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="author">Aldo Allende</string>
    <string name="acerca_de_nosotros">Acerca de Nosotros</string>
    <string name="facultad_de_ingenieria_unnam">Facultad de ingenieria UNAM</string>
    <string name="descripcion_about">Desarrollador de aplicasiones en coursera</string>
    <string name="ultimos_5_likes">Ultimos 5 likes</string>
</resources>
