<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleMascota">

    <include
        android:id="@+id/my_toolbar_detalle"
        layout="@layout/action_bar"
        />

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mCVMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_card_view"
        card_view:cardCornerRadius="@dimen/corner_radius_cardview"
        android:layout_below="@id/my_toolbar_detalle"
        android:layout_marginTop="?attr/actionBarSize"
        >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            >

            <ImageView
                android:id="@+id/ivMascotaDetalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/puppy_descripcion"
                card_view:srcCompat="@drawable/puppy1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/mbottom_datos_cardview"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ibHuesoLikeDetalle"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/hueso"
                    android:contentDescription="@string/boton_para_raitear" />

                <TextView
                    android:id="@+id/tvNombreMascotaDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/textview"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/numeroDeRaiteadasDetalle"
                    android:layout_width="@dimen/ancho_raiting"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingStart="40dp"
                    android:text="@string/numero_raiteadas"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivDetalle"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/puppy_descripcion"
                    card_view:srcCompat="@drawable/hueso_favorito" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>





</androidx.coordinatorlayout.widget.CoordinatorLayout>